fixed logo alignment bug.

--- a/masterPortfolio/styles.css
+++ b/masterPortfolio/styles.css
@@ -224,6 +224,10 @@ footer {
   font-size: 15px;
 }
 
+.navbar-brand {
+  margin: 0 !important;
+}
+
 /* Set the container to take full width of the viewport */
 .container-fluid {
   padding-left: 0;
@@ -247,7 +251,6 @@ footer {
     line-height: 22px;
     }
 }
-
 
 /* Change the dropdown menu icon to white */
 .navbar-toggler-icon {
